# georges

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  README.md  __init__.py  authors.html  authorship.html  beam.py  beamline.py  beamline_builder.py  builder.py  context.py  core.html  cpymad.html  environment.yml  environment_ipy2.yml  environment_ipy3.yml  environment_py2.yml  environment_py3.yml  fermi.html  genindex.html  includeme.html  index.html  installation.html  introduction.html  madx.html  manzoni.html  modules.html  news.html  nozzle.py  nozzle_builder.py  objects.inv  optim.html  physics.py  (+13 more)
.github/: pull_request_template.md
.github/workflows/: ci.yml  code_check.yml  coverage.yml  deploy_doc.yml  develop.yaml  develop_macos.yaml  develop_ubuntu.yaml  docker-publish.yml  documentation.yml
G4Beamline/: construct_G4beamline.py
_modules/: index.html
_sources/: authors.rst.txt  authorship.md.txt  cpymad.rst.txt  fermi.rst.txt  index.md.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  madx.rst.txt  manzoni.rst.txt  modules.rst.txt  usage.rst.txt
_sources/api/: georges.madx.rst.txt  georges.manzoni.maps.rst.txt  georges.rst.txt  georges.vis.rst.txt
_static/: documentation_options.js
api/: georges.fermi.html  georges.html  georges.madx.html  georges.manzoni.elements.html  georges.manzoni.html  georges.manzoni.maps.html  georges.vis.html  modules.html  setup.html
bdsim/: __init__.py  bdsim.py  grammar.py  tracking.py
docs/: Makefile  authors.md  authors.rst  authorship.md  bdsim.rst  changelog.rst  citation.md  conf.py  contributing.rst  core.rst  cpymad.rst  fermi.rst  g4beamline.rst  index.md  index.rst  installation.md  installation.rst  introduction.md  introduction.rst  manzoni.rst  modules.rst  optim.rst  refs.bib  support.rst  usage.rst  visualisation.rst
docs/api/: georges.fermi.DifferentialHighland.rst  georges.fermi.DifferentialMoliere.rst  georges.fermi.FermiRossi.rst  georges.fermi.ICRU.rst  georges.fermi.ICRUProtons.rst  georges.fermi.propagate.rst  georges.fermi.rst  georges.fermi.track_energy.rst  georges.manzoni.apertures.circular_aperture_check.rst  georges.manzoni.apertures.elliptical_aperture_check.rst  georges.manzoni.apertures.phase_space_aperture_check.rst  georges.manzoni.apertures.rectangular_aperture_check.rst  georges.manzoni.beam.Beam.rst  georges.manzoni.beam.MadXBeam.rst  georges.manzoni.beam.TransportBeam.rst  georges.manzoni.core.match.rst  georges.manzoni.core.track.rst  georges.manzoni.core.twiss.rst  georges.manzoni.elements.BeamStop.rst  georges.manzoni.elements.Bend.rst  georges.manzoni.elements.CircularCollimator.rst  georges.manzoni.elements.Collimator.rst  georges.manzoni.elements.Degrader.rst  georges.manzoni.elements.DipEdge.rst  georges.manzoni.elements.Drift.rst  georges.manzoni.elements.Dump.rst  georges.manzoni.elements.EllipticalCollimator.rst  georges.manzoni.elements.Fringein.rst  georges.manzoni.elements.Fringeout.rst  georges.manzoni.elements.Gap.rst  georges.manzoni.elements.HKicker.rst  georges.manzoni.elements.Kicker.rst  georges.manzoni.elements.ManzoniElement.rst  georges.manzoni.elements.Marker.rst  georges.manzoni.elements.Matrix.rst  georges.manzoni.elements.Multipole.rst  georges.manzoni.elements.Quadrupole.rst  georges.manzoni.elements.RBend.rst  georges.manzoni.elements.RectangularCollimator.rst  georges.manzoni.elements.SBend.rst  (+88 more)
docs/modules/: fermi.rst  manzoni.rst  optim.rst  ptw.rst  visualisation.rst
docs/ptw_files/: Bragg_peak_library.csv  lateral_profile.csv
examples/: BDSim output.ipynb  Beamline example.ipynb  BigaussianEnvelope.ipynb  Essen - Variquad.ipynb  Example Georges.ipynb  Georges - Getting started.ipynb  Georges - Hands on.ipynb  fermi_basic_example.ipynb  gantry_scoop.py  manzoni_basic_example.py  manzoni_optimization_example.py
examples/.ipynb_checkpoints/: Example Georges-checkpoint.ipynb
examples/comparison/: bdsim_results.csv  manzoni-validation.ipynb  survey.csv
examples/fermi/: fermi_basic_example.ipynb
examples/madx_misalignment/: madx_misalignment.ipynb  ptctrackone.tfs  sectormap  twiss.outx
examples/manzoni/: P1_df_Beryllium.csv  P1_df_Beryllium.pickle  S2C2_beam.pickle  b3g_matrix.csv  manzoni_P1_tracking.ipynb  manzoni_basic_tutorial.ipynb
examples/observers/: Common_observers.ipynb  Twiss_observer.ipynb
examples/ptw/: Bragg_peak_library.csv  dose_profile_analysis_example.ipynb
experimental/: bpm.py  variquad.py
fermi/: README.md  __init__.py  fermi_eyges.py  materials_db.py  mcs.py  propagation.py  stopping.py
fermi/examples/: Fermi-Eyges example.ipynb
fermi/pdg/: atomic.csv  density.csv  radiation_length.csv  scattering_length.csv
fermi/pstar/: aluminum.csv  hydrogen.txt  oxygen.txt  tin.txt  titanium.txt
fermi_eyges/: mcs.py  nist.py
fermi_eyges/pdg/: radiation_length.csv
fermi_eyges/pstar/: README.md  air.txt  beryllium.txt  graphite.txt  lead.txt  mylar.txt  water.txt
g4beamline/: __init__.py  g4beamline.py  grammar.py  tracking.py
georges/: __init__.py  beam.py  beamline.py  beamline_builder.py  context.py  model.py  physics.py  sequence_geometry.py  simulator.py  statistics.py
georges/bdsim/: __init__.py  bdsim.py  beam_bdsim.py  output.py  (+2 more)
lib/: __init__.py
madx/: __init__.py  grammar.py  madx.py  match.py  sectormap.py  survey.py  track.py  tracking.py  twiss.py
manzoni/: README.md  __init__.py  aperture.py  constants.py  henon.py  kick.py  manzoni.py  observers.py  track.py  tracking.py  transfer.py
measure/: __init__.py  bpm.py  variquad.py
notebooks/: README.md  manzoni.nb
optim/: __init__.py
plotting/: __init__.py  aperture.py  beam.py  bpm.py  common.py  g4blprofile.py  histogram.py  histogram2d.py  losses.py  plot2Dprofile.py  survey.py  tracking.py  twiss.py
source/: includeme.html
tests/: __init__.py  context.py  test_beam.py  test_beamline.py  test_fermi.py  test_madx.py  test_madx_track.py  test_manzoni_tracking.py  test_manzoni_twiss.py  test_plotting.py  test_ptw.py  test_simulator.py
(+369 files in other folders)
